Fixed scrollbar issue with settings page

--- a/apps/finnets/app/globals.css
+++ b/apps/finnets/app/globals.css
@@ -14,30 +14,34 @@
   }
 } */
 
-html,
-body {
-  max-width: 100vw;
+html {
   height: 100%;
   overflow-x: hidden;
-  padding: 1em 1.4em;
-  background-color: #f8f8f9;
-  height: 100vh;
   overflow-y: visible;
 }
 
-@media (max-width: 790px) {
-  html,
-  body {
-    padding: 1em 1em;
-  }
-}
-
 body {
+  max-width: 100vw;
+  min-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 1em 1.4em;
   color: var(--body-text-color);
   background: var(--background);
   font-family: var(--language-font);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media (max-width: 790px) {
+  body {
+    padding: 1em 1em;
+  }
+}
+
+.content {
+  width: 100%;
+  overflow: visible;
 }
 
 h1,
